# Compiler & linker flags
AM_CXXFLAGS = -g -Wall -Werror
AM_LDFLAGS  =

SUBDIRS = \
    math \
    ml \
    unit_test


# Internal headers
noinst_HEADERS = \
    config.hxx

lib_LTLIBRARIES = \
    liblvq.la

liblvq_la_SOURCES =

liblvq_la_LIBADD =


# Executables
bin_PROGRAMS =


LDADD = liblvq.la
